--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
-    "angular-messages": "~1.4.1"
+    "angular-messages": "~1.4.1",
+    "highstock-release": "~2.1.6"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
